supplement existing JS file with one working example of colecting data and displaying image through if else and the double ampersand

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div class="radio">
               <p class="radio-btn-title">What absolutely must accompany your coffee?</p>
               <label>
-                <input type="radio" name="coffee" id="blackcoffee">
+                <input type="radio" name="coffee" value="blackcoffee">
                 The cup it's in!
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="coffee" id="sugar">
+                <input type="radio" name="coffee" value="sugar">
                 Sugar
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="coffee" id="cream">
+                <input type="radio" name="coffee" value="cream">
                 Cream
               </label>
             </div>
@@ -63,9 +63,18 @@
               </label>
             </div>
             <button class="btn btn-default" type="submit">Submit </button>
-
           </form>
 
+          <!-- Hidden Destinations -->
+          <div class="cold-hide">
+            <img class="img-responsive" src="img/cold.jpg" alt="Ocean" />
+          </div>
+          <div class="machu-hide">
+            <img class="img-responsive" src="img/warm.jpg" alt="Ocean" />
+          </div>
+          <div class="warm-hide">
+            <img class="img-responsive" src="img/machu.jpg" alt="Ocean" />
+          </div>
         </div>
 
       </div>
