add varibles assigned to each quiz question, and full width beach image

--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
           <!-- Heading -->
           <h2>Where Will Your Next Vacation Take You?</h2>
           <h4>Istanbul, Turkey? Buenos Aires, Argentina?<br><small>Either way you're going on vacation. Grab your passport, and lets go!</small></h4>
+        </div>
+      </div>
+    </div>
 
-          <!-- Beach Image -->
-          <img class="img-responsive" src="img/beach.jpg" alt="Ocean" />
+    <!-- Beach Image, No Container-->
+    <img class="img-responsive" src="img/beach.jpg" alt="Ocean" />
+
+    <!-- Form Container  -->
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
 
           <!-- Vacation Radio Questions Form -->
           <form class="" action="index.html" method="post">
@@ -41,6 +49,7 @@
                 Cream
               </label>
             </div>
+            <hr>
 
             <!-- Zombie Question -->
             <div class="radio">
@@ -62,23 +71,88 @@
                 <a href="http://walkingdead.wikia.com/wiki/Katana" target="_blank">Michonne's Katana</a>
               </label>
             </div>
+            <hr>
+
+            <!-- Annoy Question -->
+            <div class="radio">
+              <p class="radio-btn-title">What annoys you most?</p>
+              <label>
+                <input type="radio" name="annoy" value="hipsters">
+                Hipsters
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="annoy" value="nails">
+                Hang Nails
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="annoy" value="heat">
+                Heat
+              </label>
+            </div>
+            <hr>
+
+            <!-- LRC Question -->
+            <div class="radio">
+              <p class="radio-btn-title">Are you left handed, right handed, or ambidextrous?</p>
+              <label>
+                <input type="radio" name="lrc" value="left">
+                Left Handed
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="lrc" value="right">
+                Right Handed
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="lrc" value="ambi">
+                Ambidextrous
+              </label>
+            </div>
+            <hr>
+
+            <!-- Collaboration Question -->
+            <div class="radio">
+              <p class="radio-btn-title">Who are you most likely to do a song collaboration with?</p>
+              <label>
+                <input type="radio" name="collab" value="nas">
+                Nas
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="collab" value="lotus">
+                Flying Lotus
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="collab" value="elton">
+                Elton John
+              </label>
+            </div>
             <button class="btn btn-default" type="submit">Submit </button>
           </form>
 
           <!-- Hidden Destinations -->
           <div class="cold-hide">
-            <img class="img-responsive" src="img/cold.jpg" alt="Ocean" />
+            <img class="img-responsive" src="img/cold.jpg" alt="South shore beach, Bermuda" />
           </div>
           <div class="machu-hide">
-            <img class="img-responsive" src="img/warm.jpg" alt="Ocean" />
+            <img class="img-responsive" src="img/warm.jpg" alt="Aurora Borealis at the Glass Igloo Hotel in Kakslauttanen, Finland" />
           </div>
           <div class="warm-hide">
-            <img class="img-responsive" src="img/machu.jpg" alt="Ocean" />
+            <img class="img-responsive" src="img/machu.jpg" alt="SALKANTAY TREK TO MACHU PICCHU" />
           </div>
         </div>
-
       </div>
-
     </div>
+
   </body>
 </html>
