add functionality to slide to bottom of page upon submit

--- a/index.html
+++ b/index.html
@@ -137,22 +137,26 @@
                 Elton John
               </label>
             </div>
-            <button class="btn btn-default" type="submit">Submit </button>
+            <button class="btn btn-primary" type="submit">Submit </button>
           </form>
 
           <!-- Hidden Destinations -->
-          <div class="cold-hide">
-            <img class="img-responsive" src="img/cold.jpg" alt="South shore beach, Bermuda" />
-          </div>
-          <div class="machu-hide">
-            <img class="img-responsive" src="img/warm.jpg" alt="Aurora Borealis at the Glass Igloo Hotel in Kakslauttanen, Finland" />
-          </div>
-          <div class="warm-hide">
-            <img class="img-responsive" src="img/machu.jpg" alt="SALKANTAY TREK TO MACHU PICCHU" />
+          <div id=destinations>
+            <div class="cold-hide">
+              <h3>Where Will Your Next Vacation Take You?</h3>
+              <h4>You'll be visiting the Glass Igloo Hotel, Kakslauttanen Arctic Resort, Finland</h4>
+              <p>Sure you're human now, but you were born a polar bear. Grab a coca cola and head on up to Finland for the view of a lifetime!</p>
+              <img class="img-responsive" src="img/cold.jpg" alt="South shore beach, Bermuda" />
+            </div>
+            <div class="machu-hide">
+              <img class="img-responsive" src="img/warm.jpg" alt="Aurora Borealis at the Glass Igloo Hotel in Kakslauttanen, Finland" />
+            </div>
+            <div class="warm-hide">
+              <img class="img-responsive" src="img/machu.jpg" alt="SALKANTAY TREK TO MACHU PICCHU" />
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </body>
 </html>
