--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.12.2.js"></script>
     <script src="js/scripts.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Original+Surfer' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="img/palmtreefavicon.jpg">
     <title>Where Will Your Next Vacation Take You?</title>
   </head>
   <body>
@@ -149,10 +151,16 @@
               <img class="img-responsive" src="img/cold.jpg" alt="South shore beach, Bermuda" />
             </div>
             <div class="machu-hide">
-              <img class="img-responsive" src="img/warm.jpg" alt="Aurora Borealis at the Glass Igloo Hotel in Kakslauttanen, Finland" />
+              <h3>Where Will Your Next Vacation Take You?</h3>
+              <h4>You'll be visiting the Salkantay - A Lodge-to-Lodge Trek To Machu Picchu</h4>
+              <p>This isn't yout average undergrad spring break destnation. This takes guts. This takes gall. Good think you've got both. No guts, no gall, no glory!</p>
+              <img class="img-responsive" src="img/machu.jpg" alt="Aurora Borealis at the Glass Igloo Hotel in Kakslauttanen, Finland" />
             </div>
             <div class="warm-hide">
-              <img class="img-responsive" src="img/machu.jpg" alt="SALKANTAY TREK TO MACHU PICCHU" />
+              <h3>Where Will Your Next Vacation Take You?</h3>
+              <h4>You'll be visiting the Cat Island, Bahamas</h4>
+              <p>Even the most upbeat folks need to kick back and relax. Sandy beaches, crystal clear waters, and a fresh brease are all you need to complete the perfect vacation.</p>
+              <img class="img-responsive" src="img/warm.jpg" alt="SALKANTAY TREK TO MACHU PICCHU" />
             </div>
           </div>
         </div>
