resolve bug preventing result from showing.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 Elton John
               </label>
             </div>
-            <button class="btn btn-primary" type="submit">Submit </button>
+            <button class="btn btn-primary" type="button">Submit </button>
           </form>
 
           <!-- Hidden Destinations -->
@@ -148,19 +148,19 @@
               <h3>Where Will Your Next Vacation Take You?</h3>
               <h4>You'll be visiting the Glass Igloo Hotel, Kakslauttanen Arctic Resort, Finland</h4>
               <p>Sure you're human now, but you were born a polar bear. Grab a coca cola and head on up to Finland for the view of a lifetime!</p>
-              <img class="img-responsive" src="img/cold.jpg" alt="South shore beach, Bermuda" />
+              <img class="img-responsive" src="img/cold.jpg" alt="Aurora Borealis at the Glass Igloo Hotel in Kakslauttanen, Finland" />
             </div>
             <div class="machu-hide">
               <h3>Where Will Your Next Vacation Take You?</h3>
               <h4>You'll be visiting the Salkantay - A Lodge-to-Lodge Trek To Machu Picchu</h4>
               <p>This isn't yout average undergrad spring break destnation. This takes guts. This takes gall. Good think you've got both. No guts, no gall, no glory!</p>
-              <img class="img-responsive" src="img/machu.jpg" alt="Aurora Borealis at the Glass Igloo Hotel in Kakslauttanen, Finland" />
+              <img class="img-responsive" src="img/machu.jpg" alt="SALKANTAY TREK TO MACHU PICCHU"  />
             </div>
             <div class="warm-hide">
               <h3>Where Will Your Next Vacation Take You?</h3>
               <h4>You'll be visiting the Cat Island, Bahamas</h4>
               <p>Even the most upbeat folks need to kick back and relax. Sandy beaches, crystal clear waters, and a fresh brease are all you need to complete the perfect vacation.</p>
-              <img class="img-responsive" src="img/warm.jpg" alt="SALKANTAY TREK TO MACHU PICCHU" />
+              <img class="img-responsive" src="img/warm.jpg" alt="South shore beach, Bermuda" />
             </div>
           </div>
         </div>
